# foliaindexer

./: AUTHORS  Makefile.am  bootstrap  configure.ac
m4/: Makefile.am
src/: .Makefile.am.un~  .foliaindexer.cxx.un~  Makefile.am  foliaindexer.cxx
